# qcutils

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  typos.toml
.github/workflows/: publish-to-pypi.yaml
scripts/: tests.sh
src/qcinf/_backends/: qcinf.py  utils.py
src/qcinf/algorithms/: geometry.py
src/qcutils/: __init__.py
src/qcutils/_backends/: openbabel.py  rdkit.py
src/qcutils/algorithms/: conversion.py  geometry.py
tests/: test_geometry_algos.py  test_openbabel.py  test_qcinf.py  test_rdkit.py  test_utils.py
